<resources>
    <string name="app_name">Situations</string>
    <string name="signup">SignUp</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="congrats_you_re_signed_in">Congrats you\'re signed in</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="sign_in_with_email">Sign In with Email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="todo">TODO</string>
    <string name="user_name">User Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="useraccount">User Account</string>
    <string name="selectsituation">Select a Situation</string>
    <string-array name="planets_array">
        <item>Select a Category</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
